--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="description" content="موقع الإستاذ الإعلامي محمد الكثيري">
         <meta name="author" content="" />
-        <title>Freelancer - Start Bootstrap Theme</title>
+        <title>محمد الكثيري</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.jpeg" />
         <!-- Font Awesome icons (free version)-->
@@ -27,20 +27,20 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                                                   <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger h4" href="#about">برامج إعلامية
+                                                   <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger h5" href="#about">برامج إعلامية
 </a></li>
-                           <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger h4" href="#portfolio">مشاريع وتغطيات
+                           <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger h5" href="#portfolio">مشاريع وتغطيات
 </a></li>
 
-                        <li class="nav-item mx-0 mx-lg-1"><a class="h4 nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://drive.google.com/drive/folders/1eccKGWVi-kUqCg66T6Lv7ycmvf046-ve">شهادات وإنجازات</a></li>
-                      <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger h4" href="https://www.google.com/search?q=html+a+tag+with+PDF&oq=html+a+tag+with+PDF&aqs=chrome..69i57j0i22i30i457.7781j0j7&sourceid=chrome&ie=UTF-8">السيرة الذاتية
+                        <li class="nav-item mx-0 mx-lg-1"><a class="h5 nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://drive.google.com/drive/folders/1eccKGWVi-kUqCg66T6Lv7ycmvf046-ve">شهادات وإنجازات</a></li>
+                      <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger h5" href="https://www.google.com/search?q=html+a+tag+with+PDF&oq=html+a+tag+with+PDF&aqs=chrome..69i57j0i22i30i457.7781j0j7&sourceid=chrome&ie=UTF-8">السيرة الذاتية
 </a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Masthead-->
-        <header class=" text-center pt-5">
+        <header class=" text-center " style="padding-top: 4rem">
            <img src="assets/img/560188af-3ee2-406e-a040-582eda9d5dfd.jpg" alt="" width="100%">
 
         </header>
