--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/adver/adv3.png" alt="">
+                            <img class="img-fluid" src="assets/img/adver/adv3.jpg" alt="">
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -423,7 +423,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">قماش حيفينشي</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">قماش جيفينشي</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -431,7 +431,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/adver/adv3.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/adver/adv3.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
