--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 </a></li>
 
                         <li class="nav-item mx-0 mx-lg-1"><a class="h5 nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://drive.google.com/drive/folders/1eccKGWVi-kUqCg66T6Lv7ycmvf046-ve">شهادات وإنجازات</a></li>
-                      <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger h5" href="https://www.google.com/search?q=html+a+tag+with+PDF&oq=html+a+tag+with+PDF&aqs=chrome..69i57j0i22i30i457.7781j0j7&sourceid=chrome&ie=UTF-8">السيرة الذاتية
+                      <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger h5" href="assets/%D8%B3%D9%8A%D8%B1%D8%A9%20%D9%85%D8%AD%D9%85%D8%AF%20%D8%A7%D9%84%D9%83%D8%AB%D9%8A%D8%B1%D9%8A1.pdf">السيرة الذاتية
 </a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Masthead-->
-        <header class=" text-center " style="padding-top: 4rem">
+        <header class=" text-center " style="padding-top: 5rem">
            <img src="assets/img/560188af-3ee2-406e-a040-582eda9d5dfd.jpg" alt="" width="100%">
 
         </header>
@@ -335,9 +335,7 @@
             </div>
         </footer>
         <!-- Copyright Section-->
-        <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright © Your Website 2020</small></div>
-        </div>
+
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed">
             <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
