--- a/index.html
+++ b/index.html
@@ -60,22 +60,29 @@
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
                     <!-- program 1-->
-                    <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="col-md-4 col-lg-3 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="">
                             <a href="https://www.youtube.com/playlist?list=PLNOx5ZLIw5nUY45l5KVy3XGh-8kpLenir"><img class="img-fluid" src="assets/img/programs/vid1.png" alt="" style="height: 20rem" width="100%"></a>
                         </div>
                     </div>
                     <!-- program 2-->
-                    <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="col-md-4 col-lg-3 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="">
                            <a href="https://www.youtube.com/playlist?list=PLNOx5ZLIw5nX58XlIWn9WqUcRuhdqK5e-"> <img class="img-fluid" src="assets/img/programs/vid2.png" alt="" style="height: 20rem" width="100%"></a>
                         </div>
                     </div>
                     <!-- program 3-->
-                    <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="col-md-4 col-lg-3 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#">
         
                            <a href="https://www.youtube.com/playlist?list=PLNOx5ZLIw5nVwTBZgsfjR3iB4WJDumOMs"> <img class="img-fluid" src="assets/img/programs/vid3.png" alt="" style="height: 20rem" width="100%"></a>
+                        </div>
+                    </div>
+                    <!-- program 7-->
+                     <div class="col-md-4 col-lg-3 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#">
+        
+                           <a href="#"> <img class="img-fluid" src="assets/img/programs/vid7.png" alt="" style="height: 20rem" width="100%"></a>
                         </div>
                     </div>
                     <!-- program 4-->
